# edrf

./: LICENSE  README.md  pyproject.toml
server/: settings.py  urls.py
