[tool.poetry]
name = "edrf"
version = "0.1.0"
description = "e's django rest framework practise repository"
authors = ["Eles <1494136313@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1.6"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
